
syntax = "proto3";
package pb;


message KV {
  string key = 1;
  string value = 2;
}

message EmptyResponse {}